--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,14 @@
     <link rel="stylesheet" href="estilo/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
+
 <body>
     <main>
-        <section id="telefone"></section>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
         <section id="redes-sociais"></section>
     </main>
 </body>
+
 </html>
