--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegadoro não é compatível com isso.</iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegadoro não é compatível com
+                isso.</iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="you tube"></a><br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="you tube"></a><br>
             <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="Github"></a><br>
             <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
             <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
